--- a/main.html
+++ b/main.html
@@ -17,9 +17,14 @@
 
     <!-- <h2>hello javascript </h2> -->
 
-    <div class="box">first div</div>
-    <div  class="box">second div</div>
-    <div  class="box">third div</div>
+    <div class="box">this is  my div 
+        <ul> 
+            <li>item1</li>
+            <li>item2</li>
+            <li>item3</li>
+        </ul>
+    </div>
+    
     <script src="dom.js"></script>
 </body>
 </html>
