--- a/main.html
+++ b/main.html
@@ -17,13 +17,15 @@
 
     <!-- <h2>hello javascript </h2> -->
 
-    <div class="box">this is  my div 
+    <!-- <div class="box">this is  my div 
         <ul> 
             <li>item1</li>
             <li>item2</li>
             <li>item3</li>
         </ul>
-    </div>
+    </div> -->
+
+    <p class="content">i am a paragraph</p>
     
     <script src="dom.js"></script>
 </body>
