--- a/events.html
+++ b/events.html
@@ -11,6 +11,12 @@
            background-color: blueviolet;
            color: white;
         }
+        #toggle{
+            border-radius: 50px;
+            border: 2px solid purple;
+            
+        }
+
     </style>
 </head>
 <body>
@@ -18,6 +24,10 @@
    <div>
     hello there! click me 
    </div>
+   <button id="toggle">
+    mode 
+     
+   </button>
     <script src="events.js"></script>
 </body>
 </html>
